--- a/prizeNumber/conf/db.conf
+++ b/prizeNumber/conf/db.conf
@@ -1,9 +1,9 @@
 #test mysql
 [mysql]
 db_port = 3306
-db_host = 127.0.0.1
+db_host = 192.168.0.253
 db_user = root
-db_pass = sdg424
+db_pass = admin
 db_charset= utf-8
-db_name=xe
+db_name=job_record
 
