--- a/prizeNumber/conf/db.conf
+++ b/prizeNumber/conf/db.conf
@@ -1,5 +1,5 @@
 #test mysql
-[mysql]
+[job]
 db_port = 3306
 db_host = 192.168.0.253
 db_user = root
@@ -7,3 +7,12 @@ db_pass = admin
 db_charset= utf-8
 db_name=job_record
 
+
+
+[lottery]
+db_port = 3306
+db_host = 192.168.0.253
+db_user = root
+db_pass = admin
+db_charset= utf-8
+db_name=lottery
