--- a/prizeNumber/conf/local/common.conf
+++ b/prizeNumber/conf/local/common.conf
@@ -4,7 +4,7 @@
 processor = 20
 thread = 10
 sleepTimeInMainThread=3600
-
+prize_notice_server=http://127.0.0.1:8761/venus/apis/lottery/draw/prize
 
 [mail]
 mail_list=sundy68888@gmail.com
