--- a/prizeNumber/conf/common.conf
+++ b/prizeNumber/conf/common.conf
@@ -4,6 +4,7 @@
 processor = 20
 thread = 10
 sleepTimeInMainThread=3600
+prize_notice_server=http://192.168.0.225:8088/venus/apis/lottery/draw/prize
 
 
 [mail]
