--- a/prizeNumber/conf/local/db.conf
+++ b/prizeNumber/conf/local/db.conf
@@ -1,7 +1,16 @@
-[mysql]
+[job]
 db_port = 3306
 db_host = 127.0.0.1
 db_user = root
 db_pass = sdg424
 db_charset= utf-8
 db_name=xe
+
+
+[lottery]
+db_port = 3306
+db_host = 127.0.0.1
+db_user = root
+db_pass = sdg424
+db_charset= utf-8
+db_name=lottery
